[gd_scene load_steps=4 format=3 uid="uid://c3v8my0x65hcb"]

[ext_resource type="Script" path="res://BaseTower.gd" id="1_w781r"]
[ext_resource type="PackedScene" uid="uid://shjvygj3klas" path="res://Assets/kenney_castle-kit/Models/GLB format/tree-trunk.glb" id="2_r6ep6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bjbps"]
height = 1.44808
radius = 2.09203

[node name="BaseTower" type="Node3D"]
script = ExtResource("1_w781r")

[node name="TowerHead" parent="." instance=ExtResource("2_r6ep6")]
transform = Transform3D(1.47529, 0, 0, 0, 0.0611099, -1.47402, 0, 1.47402, 0.0611099, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.519518, 0)
shape = SubResource("CylinderShape3D_bjbps")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
